# langgraph-selenium-testng-framework-generator

./: .env.example  .gitignore  README.md  pyproject.toml
.deepeval/: .deepeval_telemetry.txt
docs/: generated-framework-contract.md  prompt-contracts.md
docs/plans/: 2026-05-27-langgraph-selenium-testng-framework-generator.md
examples/: ecommerce_demo.yaml  ecommerce_full.yaml  minimal.yaml
qa_framework_generator/: __main__.py  cli.py  config.py  evaluator.py  file_writer.py  graph.py  llm.py  models.py  prompts.py  renderer.py  repair.py  state.py  validators.py
qa_framework_generator/templates/java/: BaseApiTest.java.j2  BasePage.java.j2  BaseTest.java.j2  ConfigLoader.java.j2  DbHelper.java.j2  DbSampleTest.java.j2  DriverFactory.java.j2  EnvConfig.java.j2  ExtentManager.java.j2  ExtentReportListener.java.j2  ExtentTestManager.java.j2  JsonPlaceholderCrudTest.java.j2  PageObject.java.j2  Post.java.j2  README.md.j2  RetryAnalyzer.java.j2  RetryTransformer.java.j2  ScreenshotUtil.java.j2  TestClass.java.j2  TestListener.java.j2  env.properties.j2  github-actions.yml.j2  gitignore.j2  log4j2.xml.j2  pom.xml.j2  testng.xml.j2
qa_framework_generator/templates/prompts/: api_test_system.md  blueprint_system.md  db_test_system.md  (+5 more)
selenium-testng-framework-output/: .gitignore  GENERATION_REPORT.md  README.md  pom.xml
tests/: test_config.py  test_e2e_generation.py  test_evaluator.py  test_file_writer.py  test_graph_routes.py  test_maven_validator.py  test_prompt_outputs.py  test_renderer.py  test_repair.py  test_validators.py
tests/fixtures/: minimal_config.yaml
(+6 files in other folders)
