[project]
name = "qa-framework-generator"
version = "0.1.0"
description = "LangGraph-powered generator for Java Selenium + TestNG automation frameworks"
requires-python = ">=3.12"
dependencies = [
    "langgraph",
    "langchain-openai",
    "pydantic",
    "pyyaml",
    "jinja2",
    "python-dotenv",
    "typer",
    "deepeval>=4.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]
eval = [
    "deepeval",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["qa_framework_generator"]
